Probando con zips

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<h1>¿De dónde vienen los fármacos?</h1>
 	<p>Te lo vamos a explicar</p>
 	<p>Descárgate nuestro juego</p>
-	<a href="./Windows">Windows</a>
-	<a href="./Linux">Linux</a>
+	<a href="Windows.zip">Windows</a>
+	<a href="Linux.zip">Linux</a>
 </body>
 
 </html>
