--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
 	<a href="Windows.zip">Windows</a>
 	<a href="Linux.zip">Linux</a>
 </body>
+	
+<div style="position: relative;background-color: blue; width: 600px; height: 800px;">    
 
+    <div style="position: absolute; bottom: 5px; background-color: green">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+    </div>
+</div>
+	    
 </html>
