--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
 	<h1>¿De dónde vienen los fármacos?</h1>
 	<p>Te lo vamos a explicar</p>
 	<p>Descárgate nuestro juego</p>
-	<a href="Windows.zip">Windows</a>
-	<a href="Linux.zip">Linux</a>
+	<a href="De_donde_vienen_los_farmacos_Windows.zip">Windows</a>
+	<a href="De_donde_vienen_los_farmacos_Linux.zip">Linux</a>
+	
+	<br>
+	Información útil sobre el juego:
+	<ul>
+	<li><a href="Como_jugar.txt">Cómo jugar</a>.</li>
+	<li><a href="Creditos.txt">Créditos</a>.</li>
+	</ul>
+	<br>
+	Instalación: realmente, no requiere instalación, simplemente descarga el archivo, descomprime y empieza a jugar.
+	<ul>
+	<li> Windows: simplemente descomprime el archivo .zip de la descarga. Una vez descomprimida, haz doble click sobre el fichero Farmacos_juego.exe para empezar a jugar</li>
+	<li> Linux: descomprime el archivo .zip de la descarga. En la carpeta "data" hay dos archivos ejecutables: ags32 (para sistemas de 32 bits) y ags64 (para sistemas de 64 bits).
+		<ul>
+			<li>Tendrás que dar permiso de ejecución. Para ello:</li>
+			<li>Abre un terminal y navega a la carpeta data</li>
+			<li>Cambia los permisos de ejecución del fichero ags32 o ags64. Puedes usar la siguiente línea de comando: chmod ugo+x ags64 ags32.</li>
+		</ul>
+	</ul>
 </body>
 	
 <div style="position: relative;background-color: white; width: 600px; height: 100px;">    
