--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
 	<h1>¿De dónde vienen los fármacos?</h1>
 	<p>Te lo vamos a explicar</p>
-	<p>Descárgate nuestro juego</p>
-	<a href="De_donde_vienen_los_farmacos_Windows.zip">Windows</a>
-	<a href="De_donde_vienen_los_farmacos_Linux.zip">Linux</a>
-	
+	<p>Descárgate nuestro juego, disponible en:</p>
+	<ul>
+		<li><a href="De_donde_vienen_los_farmacos_Windows.zip">Windows</a></li>
+		<li><a href="De_donde_vienen_los_farmacos_Linux.zip">Linux</a></li>
+	</ul>
+	<br>
 	<br>
 	Información útil sobre el juego:
 	<ul>
