--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 	Instalación: realmente, no requiere instalación, simplemente descarga el archivo, descomprime y empieza a jugar.
 	<ul>
 	<li> Windows: simplemente descomprime el archivo .zip de la descarga. Una vez descomprimida, haz doble click sobre el fichero Farmacos_juego.exe para empezar a jugar</li>
+		<ul>
+			<li> Es posible que Windows Defender detecte el archivo ejecutable como una amenaza. No te preocupes, esto lo hace de forma habitual con programas de origen desconocido.</li>
+			<li> Si es así, recibirás una notificación de Windos Defender. Clicka sobre ella y podrás seleccionar añadir como una excepción el programa.
+		</ul>
 	<li> Linux: descomprime el archivo .zip de la descarga. En la carpeta "data" hay dos archivos ejecutables: ags32 (para sistemas de 32 bits) y ags64 (para sistemas de 64 bits).
 		<ul>
 			<li>Tendrás que dar permiso de ejecución. Para ello:</li>
