--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 			<li>Cambia los permisos de ejecución del fichero ags32 o ags64. Puedes usar la siguiente línea de comando: chmod ugo+x ags64 ags32.</li>
 		</ul>
 	</ul>
+	<br>
+	Si quieres mejorar o cambiar el juego, hemos creado un repositorio para desarrolladores. Puedes descargarlo <a href="https://github.com/gpcastelo/pe_game">aquí</a>. 
+	Para poder realizar modificaciones, necesitarás descargar <a href="https://www.adventuregamestudio.co.uk/site/ags/">Adventure Game Studio</a>.
 </body>
 	
 <div style="position: relative;background-color: white; width: 600px; height: 100px;">    
