--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 	<ul>
 	<li> Windows: simplemente descomprime el archivo .zip de la descarga. Una vez descomprimida, haz doble click sobre el fichero Farmacos_juego.exe para empezar a jugar</li>
 		<ul>
-			<li> Es posible que Windows Defender detecte el archivo ejecutable como una amenaza. No te preocupes, esto lo hace de forma habitual con programas de origen desconocido.</li>
-			<li> Si es así, recibirás una notificación de Windos Defender. Clicka sobre ella y podrás seleccionar añadir como una excepción el programa.
+			<li> Es posible que Windows Defender o tu antivirus detecte el archivo ejecutable como una amenaza. No te preocupes, esto lo hace de forma habitual con programas de origen desconocido.</li>
+			<li> Si es así, recibirás una notificación de Windos Defender. Haz click sobre la opción de "Más información", debajo del texto.</li>
+			<li> Abajo, a la izquierda, verás la opción de "Ejecutar de todos modos".</li>
 		</ul>
 	<li> Linux: descomprime el archivo .zip de la descarga. En la carpeta "data" hay dos archivos ejecutables: ags32 (para sistemas de 32 bits) y ags64 (para sistemas de 64 bits).
 		<ul>
@@ -44,7 +45,7 @@
 	Para poder realizar modificaciones, necesitarás descargar <a href="https://www.adventuregamestudio.co.uk/site/ags/">Adventure Game Studio</a>.
 </body>
 	
-<div style="position: relative;background-color: white; width: 600px; height: 100px;">    
+<div style="position: relative;background-color: white; width: 800px; height: 100px;">    
 
     <div style="position: absolute; bottom: 5px; background-color: white">
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
