--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 			<li> Si es así, recibirás una notificación de Windos Defender. Haz click sobre la opción de "Más información", debajo del texto.</li>
 			<li> Abajo, a la izquierda, verás la opción de "Ejecutar de todos modos".</li>
 		</ul>
+	<br>
 	<li> Linux: descomprime el archivo .zip de la descarga. En la carpeta "data" hay dos archivos ejecutables: ags32 (para sistemas de 32 bits) y ags64 (para sistemas de 64 bits).
 		<ul>
 			<li>Tendrás que dar permiso de ejecución. Para ello:</li>
 			<li>Abre un terminal y navega a la carpeta data</li>
-			<li>Cambia los permisos de ejecución del fichero ags32 o ags64. Puedes usar la siguiente línea de comando: chmod ugo+x ags64 ags32.</li>
+			<li>Cambia los permisos de ejecución del fichero ags32 o ags64. Puedes usar la siguiente línea de comando: chmod ugo+x ags64 ags32</li>
 		</ul>
 	</ul>
 	<br>
